# ares

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/doxygen/: Doxyfile
include/ares/core/: Camera.hpp  CameraNode.hpp  DrawingContext.hpp  EventDispatcher.hpp  FPSCameraController.hpp  FlatColorMaterial.hpp  FlatTexMaterial.hpp  Light.hpp  LightNode.hpp  Material.hpp  Mesh.hpp  MeshNode.hpp  Node.hpp  NormalMapMaterial.hpp  PBRMaterial.hpp  PerspectiveCamera.hpp  PhongColorMaterial.hpp  PointLight.hpp  Primitive.hpp  Renderer.hpp  Scene.hpp
include/ares/gltf/: Gltf.hpp
include/ares/glutils/: Attribute.hpp  AttributeData.hpp  GlUtils.hpp  Image.hpp  LinearAlgebra.hpp  PngLoader.hpp  RGBAColor.hpp  Shader.hpp  ShaderManager.hpp  Texture.hpp  Uniform.hpp  (+1 more)
src/: CMakeLists.txt
src/core/: CMakeLists.txt  Camera.cpp  CameraNode.cpp  DrawingContext.cpp  EventDispatcher.cpp  FPSCameraController.cpp  FlatColorMaterial.cpp  FlatTexMaterial.cpp  Light.cpp  LightNode.cpp  Material.cpp  Mesh.cpp  MeshNode.cpp  Node.cpp  NormalMapMaterial.cpp  PBRMaterial.cpp  PerspectiveCamera.cpp  PhongColorMaterial.cpp  PointLight.cpp  Primitive.cpp  Renderer.cpp  Scene.cpp
src/gltf/: CMakeLists.txt  Gltf.cpp
src/glutils/: Attribute.cpp  AttributeData.cpp  CMakeLists.txt  GlUtils.cpp  Image.cpp  LinearAlgebra.cpp  PngLoader.cpp  Shader.cpp  ShaderManager.cpp  Texture.cpp  Uniform.cpp  Vbo.cpp
src/port/: CMakeLists.txt  X11Display.cpp  X11Input.cpp
tests/: CMakeLists.txt
tests/gltf_test/: CMakeLists.txt  main.cpp
tests/normal_map_test/: CMakeLists.txt  main.cpp
(+5 files in other folders)
